--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+.App{
+    background-color: brown;
+    height: 80vh;
+    min-height: auto;
+    display: flex;
+    width: 80vw;
+    justify-content: center;
+    align-items: center;
+    margin: 10vh auto;
+    border: 2px solid;
+    border-radius: 12px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.inner-card{
+    margin: 10px; 
+    background-color: bisque;
+    height: 70vh;
+    width: 65vw;
+    border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+button{
+    background-color: brown;
+    outline: none;
+    border:1px solid bisque;
+    padding:10px;
+    width: 60vw;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    margin: 5px auto;
+    font-size: medium;
+    font-style: italic;
+    font-weight: 600;
+    color: bisque;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-div{
+    display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.h4, h4{
+    font-size: medium;
+    font-style: italic;
+    font-weight: 800;
+    color: chocolate;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.h3, h3{
+    font-size: xxx-large;
+    font-style: italic;
+    font-weight: 900;
+    color: chocolate;
+}
+
+.ques-div{
+    padding:15px;
+    margin: 10px auto;
+}
+
+
+button:hover{
+    cursor: pointer;
+    background-color:rgb(126, 28, 28);
+}
+
+
+.next-ques-btn{
+    margin-top: 10px;
+    background-color: brown;
+    width: 30vw;
+    padding:10px
 }
